--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "wallant",
-  "version": "1.0.3",
-  "description": "A new way of handling the state",
+  "version": "1.1.0",
+  "description": "Persistant, auto-validate, and computed state container",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
-    "state"
+    "state",
+    "state-management",
+    "redux",
+    "react-native-state-management",
+    "react-native",
+    "component",
+    "store"
   ],
   "repository": {
     "type": "git",
